# frugalos

./: .env.example  .gitignore  API_CONFIGURATION.md  CLAUDE.md  COST_OPTIMIZATION_ANALYSIS.md  FINAL_SPEC.md  FRUGALOS_BOOTSTRAP.md  FRUGALOS_PERSONAL_ASSISTANT_SPEC.md  FRUGALOS_WEB_SPEC.md  HERMES_AUTONOMOUS_MODE_SPEC.md  HERMES_BACKEND_AGNOSTIC_SPEC.md  HERMES_COMPLETE_IMPLEMENTATION_SPEC.md  HERMES_META_LEARNING_SPEC.md  IMPLEMENTATION_PLAN_FINAL.md  IMPLEMENTATION_TASKS.md  LICENSE  LLM-OVERVIEW.md  MVP_COMPLETE.md  MVP_SPEC.md  OLLAMA_SETUP_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  SMART_ROUTING_SYSTEM_SPEC.md  TESTING_EXECUTION_SUMMARY.md  comprehensive_auto_test_suite.py  cost_optimization_results.db  cost_optimization_tester.py  debug_cloud_test.py  hermes_testing_report.md  model_characterization_test.py  model_optimizer_suite.py  model_performance.db  pyproject.toml  quick_cost_test.py  requirements.txt  run_hermes.py  setup_frugalos.sh  simple_test.py  test_debug.py  test_hermes_complete.py  (+3 more)
frugalos/: clarifier_prompt.md  cli.py  ledger.py  ledger_migration.py  policy.yaml  runner.py
hermes/: .env.example  CHANGELOG.md  FUTURE_ROADMAP.md  HERMES_README.md  HERMES_TESTING_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  README.md  __init__.py  app.py  app_v2.py  config.py  config.yaml  database.py  error_handler.py  events.py  local_execution.py  logger.py  monitoring.py  notifications.py  orchestrator.py  queue.py  retry_system.py  tailscale.py
samples/: receipt.txt
tests/: __init__.py  run_tests.py  test_autonomous.py  test_hermes.py  (+2 more)
(+162 files in other folders)
